<resources>
    <string name="app_name">Summa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="item">Item</string>
    <string name="quantidade">Quantidade</string>
    <string name="sabonete">Sabonete</string>
    <string name="total">Total:</string>
    <string name="valor">Valor</string>
    <string name="preencha_o_nome_do_item">Preencha o nome do Item</string>
    <string name="nome_item">Nome do item</string>
    <string name="todas_listas">Todas Listas</string>
    <string name="item_removido">Item removido</string>
    <string name="desfazer">DESFAZER</string>
    <string name="compra_do_mes">Compra do mês</string>
    <string name="nome_da_lista">Nome da Lista</string>
    <string name="criar_lista">Criar lista</string>
    <string name="criar">Criar</string>
    <string name="cancelar">Cancelar</string>
    <string name="informe_o_nome_da_lista">Informe o nome da lista</string>
    <string name="lista_removida">Lista removida</string>
    <string name="previsao_de_compra">Previsão de compra</string>
    <string name="quando_comprar">Quando comprar</string>
    <string name="o_nome_da_lista_nao_pode_ser_vazio">O nome da lista não pode ser vazio</string>
    <string name="rs2_50">R$ 0,00</string>
    <string name="adicione_uma_data">Add Data</string>
    <string name="digite_o_item">Digite o item</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="lista_vazia_adicione_itens">Lista vazia, adicione itens!</string>
    <string name="item_nao_encontrado">Não encontramos esse item na sua lista.</string>
    <string name="n_o_encontramos_essa_lista">Não encontramos essa lista</string>
    <string name="remover">Remover</string>
    <string name="duplicar">Duplicar</string>
    <string name="insira_o_nome_do_item">Insira o nome do item</string>
    <string name="preencha_o_nome_da_lista">Preencha o nome da lista</string>
    <string name="o_nome_do_item_n_o_pode_ser_vazio">O nome do item não pode ser vazio.</string>
</resources>