<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray500"
    tools:context=".ui.shoppingItem.ShoppingItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/gray900"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_chevron_left"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPageName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Inter.Heading1"
            android:textColor="@color/gray100"
            android:textColorHint="@color/gray300"
            app:layout_constraintBottom_toBottomOf="@+id/ibBack"
            app:layout_constraintEnd_toStartOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/ibBack"
            app:layout_constraintTop_toTopOf="@+id/ibBack"
            app:layout_constraintVertical_bias="0"
            tools:text="@string/lista_de_compras" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tag_quantity"
            android:backgroundTint="@color/green"
            android:maxWidth="140dp"
            android:textAppearance="@style/TextAppearance.Inter.Heading2"
            app:layout_constraintBottom_toBottomOf="@+id/etPageName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPageName"
            tools:text="20/04/2025" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="-50dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/clHeader">

        <LinearLayout
            android:id="@+id/llItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/llQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etListName"
                android:text="@string/item" />

            <EditText
                android:id="@+id/etListName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="text"
                android:textColor="@color/gray100"
                android:textColorHint="@color/gray300"
                android:imeOptions="actionNext"
                android:hint="@string/nome_item"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btnAdd"
            app:layout_constraintStart_toEndOf="@+id/llItem"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantidade" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clQuantity"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_quantity_unity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAmount"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789.,"
                    android:hint="Qtd"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/gray100"
                    android:textColorHint="@color/gray300"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="24dp"
                    android:background="@color/gray300"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/edtAmount"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/slcUnit"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_chevron_down"
                    android:drawableTint="@color/gray200"
                    android:focusable="false"
                    android:imeOptions="actionDone"
                    android:inputType="none"
                    android:padding="8dp"
                    android:text="un"
                    android:textColor="@color/gray100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@+id/llQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/llQuantity"
            app:layout_constraintTop_toTopOf="@+id/llQuantity"
            app:layout_constraintVertical_bias="0.95" />

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llQuantity">

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etListName"
                android:text="@string/pesquisar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_quantity_unity"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llQuantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/digite_o_item"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/gray100"
                    android:textColorHint="@color/gray300"
                    app:layout_constraintEnd_toStartOf="@+id/ibClearSearch"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/ibClearSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_clear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/clFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clForm"
        tools:listitem="@layout/item_shopping" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFooter"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingHorizontal="24dp"
        android:background="@color/gray900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAppearance="@style/TextAppearance.Inter.Heading2" />

            <TextView
                android:id="@+id/tvTotalGeral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAppearance="@style/TextAppearance.Inter.Heading1"
                android:textColor="@color/green"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>